--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <tr>
             <td> <a href="21.html" target="_blank"> EXERCISE 21 </a> </td> 
             <td> <a href="22.html" target="_blank"> EXERCISE 22 </a> </td> 
-            <td> <a href="23.html" target="_blank"> EXERCISE 23 </a> </td> 
+            <td> <a href="23.htm" target="_blank"> EXERCISE 23 </a> </td> 
             <td> <a href="24.html" target="_blank"> EXERCISE 24 </a> </td> 
             <td> <a href="25.html" target="_blank"> EXERCISE 25 </a> </td> 
             <td> <a href="26.html" target="_blank"> EXERCISE 26 </a> </td> 
