--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     
     <table>
         <tr>
-            <td> <a href="1.html" target="_blank"> EXERCISE 01 </a> </td> 
+            <td> <a href="1.HTML" target="_blank"> EXERCISE 01 </a> </td> 
             <td> <a href="2.html" target="_blank"> EXERCISE 02 </a> </td> 
             <td> <a href="3.html" target="_blank"> EXERCISE 03 </a> </td> 
             <td> <a href="4.html" target="_blank"> EXERCISE 04 </a> </td> 
             <td> <a href="5.html" target="_blank"> EXERCISE 05 </a> </td> 
             <td> <a href="6.html" target="_blank"> EXERCISE 06 </a> </td> 
             <td> <a href="7.html" target="_blank"> EXERCISE 07 </a> </td> 
-            <td> <a href="8.html" target="_blank"> EXERCISE 08 </a> </td> 
+            <td> <a href="8.HTML" target="_blank"> EXERCISE 08 </a> </td> 
             <td> <a href="9.html" target="_blank"> EXERCISE 09 </a> </td> 
             <td> <a href="10.html" target="_blank"> EXERCISE 10 </a> </td> 
         </tr>
