--- a/bv_section.html
+++ b/bv_section.html
@@ -5,7 +5,7 @@
 	</title>
 </head>
 <body>
-	<img src="C:\Users\Student\Desktop\2016738\IWT_2016738\Ques13\pilot.jpg" width=100%>
+	<img src="pilot.jpg" width=100%>
 	<p>
 		<font size=4 color=grey>A group of students at the Banasthali Vidyapith Gliding & Flying Club. Photographs:Pradeep Gaur/Mint</font>
 	</p>
@@ -23,7 +23,7 @@ LAST PUBLISHED 10.03.2018  |  04:09 AM IST
 		</a>	
 	</p>
 	<p>
-		<img src="C:\Users\Student\Desktop\2016738\IWT_2016738\Ques13\bv.jpg" width=100%>
+		<img src="bv.jpg" width=100%>
 		<p>
 			<font size=4 color=grey>"Banasthali Vidyapith is a wonderful blend & an epitome of tradition and modernity"-M Venkaiah Naidu</font>
 		</p>
